option java_package = "org.apache.hadoop.yarn.proto";
option java_outer_classname = "POSUMMasterProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.yarn;

import "posum_protos.proto";
import "yarn_service_protos.proto";

service POSUMMasterProtocolService {
    rpc forwardToScheduler (SimpleRequestProto) returns (SimpleResponseProto);
    rpc handleSchedulerEvent (HandleSchedulerEventRequestProto) returns (SimpleResponseProto);
    rpc allocateResources (SchedulerAllocateRequestProto) returns (SchedulerAllocateResponseProto);
    rpc getSchedulerQueueInfo (GetQueueInfoRequestProto) returns (GetQueueInfoResponseProto);
}